<resources>
    <string name="nav_header_desc">Navigation header</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="walk_1">Welcome</string>
    <string name="walk_2">Schedule</string>
    <string name="walk_3">Drivers</string>
    <string name="walk_1_description">Services to transport you where you need to go. A lot can happen, on our ride.</string>
    <string name="walk_2_description">Take a ride whenever and wherever you want. Plan and Schedule for us to pick you up.</string>
    <string name="walk_3_description">We have the most friendly drivers who will go the extra mile for you.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="enter_the_details_you_used_to_register">Enter the details you used to register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome_back_sign_in_to_continue">Welcome back, sign in to continue</string>
    <string name="what_your_email_address">What\'s your email address?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="invalid_email">Please enter email address</string>
    <string name="invalid_password">Please enter password</string>
    <string name="invoice">Invoice</string>
    <string name="pay_now">Pay now</string>
    <string name="time_taken">Time Taken</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="base_fare">Base Fare</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment</string>
    <string name="estimated_payment">Payment :</string>
    <string name="your_trips">Your Trips</string>
    <string name="coupon">Coupon</string>
    <string name="view_coupon">View Coupons</string>
    <string name="wallet">Wallet</string>
    <string name="passbook">Passbook</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="faq_support">FAQ Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="looking_to_change_password">Looking to change password</string>
    <string name="profile">Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="our_team_persons_will_contact_you_soon">Our team persons will contact you soon!</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="wallet_history">Wallet History</string>
    <string name="coupon_history">Coupon History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_wallet_amount">Use Wallet</string>
    <string name="past_trip_details">Past Trip Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="call">Call</string>
    <string name="pay_via">Pay via</string>
    <string name="comments">Comments</string>
    <string name="dispute">Dispute</string>
    <string name="view_receipt">View Receipt</string>
    <string name="upcoming_trip_details">Upcoming Trip Details</string>
    <string name="no_past_found">No Past Trips found</string>
    <string name="no_upcoming_found">No Upcoming Trips found</string>
    <string name="no_data_found">No data found</string>
    <string name="booking_id">Booking ID</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="choose_language">Choose Language</string>
    <string name="lost_my_item">Lost my item</string>
    <string name="incorrect_charge_dispute">Incorrect charge dispute</string>
    <string name="i_would_like_to_refund">I would like to refund</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="reason_for_canceling">Reason for canceling</string>
    <string name="ratings">Ratings your trip with</string>
    <string name="get_pricing">Proceed</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="schedule_request">Schedule Request</string>
    <string name="fare_km">Fare / km</string>
    <string name="fare_type">Fare Type</string>
    <string name="capacity">Capacity</string>
    <string name="done">Done</string>
    <string name="rate_card">Rate Card</string>
    <string name="where_to">Where to?</string>
    <string name="pickup_location">Pickup location?</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="driver_has_arrived_your_location">Driver has arrived at your location</string>
    <string name="due_to_peek_hours">Due to peek hours, Charges will be varied based on availability of providers.</string>
    <string name="cancel">Cancel</string>
    <string name="add_amount">Add Amount</string>
    <string name="add_money">Add money</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="no_coupon_added">No Coupon added</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="eta">ETA</string>
    <string name="model">Model</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="ride_now">Ride now</string>
    <string name="due_to_high_demand_price_may_vary">Due to high demand price may vary</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="white_space"> </string>
    <string name="amount">Amount</string>
    <string name="credited_by">Credited by</string>
    <string name="card">Card</string>
    <string name="offer">Offers</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="card_payment">Card Payment</string>
    <string name="add_card_for_payments">Add card for payments</string>
    <string name="other_payment">Other Payments</string>
    <string name="by_cash">By Cash</string>
    <string name="paypal">Paypal</string>
    <string name="sos">SOS</string>
    <string name="sos_alert">SOS Alert</string>
    <string name="are_sure_you_want_to_emergency_alert">Are you sure you want to proceed with emergency alert?</string>
    <string name="finding_driver">Finding driver…</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="are_sure_you_want_to_cancel_the_request">Are you sure you want to cancel the request</string>
    <string name="invalid_first_name">Please enter first name</string>
    <string name="invalid_last_name">Please enter last name</string>
    <string name="invalid_mobile">Please enter mobile</string>
    <string name="invalid_confirm_password">Please enter confirm password</string>
    <string name="password_should_be_same">Password should be same</string>
    <string name="invalid_password_length">Password length must be between 6–15 characters.</string>
    <string name="invalid_device_token">Invalid device token</string>
    <string name="invalid_device_id">Invalid device id</string>
    <string name="you_have_been_successfully_registered">You have been successfully registered.</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="please_give_permissions">Please give permissions</string>
    <string name="add_card_details">Add card details</string>
    <string name="please_enter_card_number">Please enter card number</string>
    <string name="please_enter_card_cvv">Please enter card CVV</string>
    <string name="please_enter_card_expiration_details">Please enter card expiry details</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp">OTP</string>
    <string name="otp_">OTP: %1$s</string>
    <string name="internal_server_error">Internal Server Error :(</string>
    <string name="dismiss">Dismiss</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="are_sure_you_want_to_logout">Are sure you want to logout?</string>
    <string name="driver_accepted_your_request">Driver accepted your request</string>
    <string name="driver_accepted_your_request_">Driver accepted your request! will reach you in %1$s</string>
    <string name="you_are_on_ride">You are on Ride</string>
    <string name="please_enter_cancel_reason">Please enter cancel reason</string>
    <string name="share_ride">Share Ride</string>
    <string name="card_added">Card Added</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="card_">XXXX-XXXX-XXXX-%1$s</string>
    <string name="are_sure_you_want_to_delete">Are sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="no_services">No Services</string>
    <string name="invalid_amount">Please enter amount</string>
    <string name="add_new_card">Add New Card</string>
    <string name="select_card">Select Card</string>
    <string name="_added_to_your_wallet">%1$s added to your wallet</string>
    <string name="please_select_date_time">Please select date time</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic">Arabic</string>
    <string name="no_comments">no comments</string>
    <string name="payable">Payable</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="invalid_current_password">Please enter current password</string>
    <string name="tip_your_driver">Tip Your Driver</string>
    <string name="percent10">10 %</string>
    <string name="percent15">15 %</string>
    <string name="percent20">20 %</string>
    <string name="change">CHANGE</string>
    <string name="become_driver">Become a driver</string>
    <string name="invite_friend">Invite friend</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="lost_item">Lost Item</string>
    <string name="mention_the_last_item">Mention the last item…</string>
    <string name="support_call">Support Call</string>
</resources>