<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.dispute.DisputeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/clanpro_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/dispute"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_18" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lost_my_item"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/i_would_like_to_refund"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/incorrect_charge_dispute"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

    </RadioGroup>

    <Button
        android:id="@+id/sign_in"
        style="@style/MyButton.Primary"
        android:layout_margin="16dp"
        android:text="@string/submit" />

</LinearLayout>