<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSupportCall"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:contentDescription="@string/support_call"
            app:srcCompat="@drawable/ic_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/clanpro_medium"
            android:padding="16dp"
            android:text="@string/dispute"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/cancel_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_border"
        android:gravity="top|start"
        android:hint="@string/write_your_comment"
        android:inputType="textMultiLine|textAutoComplete|textPersonName|textCapWords"
        android:lines="3"
        android:maxLength="250"
        android:maxLines="3"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_14"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dismiss"
            style="@style/MyButton.Primary"
            android:text="@string/dismiss"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit"
            style="@style/MyButton.Primary"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>