<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/clanpro_medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tip_your_driver"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:background="@drawable/border_bottom"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/bt10Percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/button_border"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/percent10"
                android:textSize="@dimen/text_12" />

            <Button
                android:id="@+id/bt15Percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/button_border"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/percent15"
                android:textSize="@dimen/text_12" />

            <Button
                android:id="@+id/bt20Percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/button_border"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/percent20"
                android:textSize="@dimen/text_12" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>
